[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.73.1", features = ["runtime"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
actix-web = "4"
serde = "1.0.137"
awc = "3"
serde_json = "1.0.81"
